tests/macro-tests/cases/widget_new/missing_semi_in_when1.stderr
error: expected `,`
  --> cases/widget_new/missing_semi_in_when1.rs:17:13
   |
17 |             cursor = CursorIcon::Pointer;
   |             ^^^^^^
